--- a/source/posts/2012-07-05.md
+++ b/source/posts/2012-07-05.md
@@ -27,7 +27,7 @@
 * [Кстати, пинтерест с моргом майкрософта](http://pinterest.com/harrymccracken/microsoft-morgue/). А не спеши ты наааас харанииииить, а у нас ищо туууууут делааааааа… #microsoft #dead
 * [Гейтс в интервью PBS искренне считает, что Apple, возможно, когда-нибудь, выпустит продукт не хуже Surface](http://news.cnet.com/8301-17852_3-57466040-71/gates-apple-may-have-to-make-a-surface-like-device/). Потрясающий оптимизм. Интересно, будет ли пользоваться хоть какой-то популярностью этот гибрид ультрабука с планшетом? #apple #microsoft #surface
 * [Самый дорогой интернет в Америке, где-то в американском Самоа](http://www.engadget.com/2012/07/04/most-expensive-internet-in-america-samoa-broadband-interview/). Сколько вы платите за интернет, кстати?  #internet #cost #usa
-* [Гугл закрывает свой офис в Атланте](https://plus.google.com/109697072684132989725/posts/WwRaBNhJAch) вместе с продуктом, который там делали. А продукт хороший, про совместное редактирование кода программ. Хорошо что его выложили в опенсорс, глядишь кто-нибудь подхватит. #google #deadpool
+* [Гугл закрывает свой офис в Атланте](https://plus.google.com/109697072684132989725/posts/WwRaBNhJAch) вместе с продуктом, который там делали. А продукт хороший, про совместное редактирование кода программ. Хорошо что его выложили в опенсорс, глядишь, кто-нибудь подхватит. #google #deadpool
 
 
 ## На грани
@@ -36,7 +36,7 @@
 * [Интересный график, показывающий, насколько скакнуло напряжение](http://imgur.com/a/ykoup) в датацентре Hetzner из-за ошибок, связанных с дополнительной секундой на прошлой неделе. Всего из-за leap second Хецнер потратил дополнительный мегаватт энергии. Не мало, да? #leapsecond #hetzner
 * [Прогноз от Марко Эрмента: если до сентября фотки iPad Mini не утекут - в этом году не ждите](http://www.marco.org/2012/07/04/the-ipad-mini). Ставлю на появление новых эплогаджетов к Рождеству! #apple #ipad
 * [На askUbuntu откопали стюардесу](http://askubuntu.com/questions/159491/why-did-this-command-make-my-system-lag-so-bad-i-had-to-reboot)! Шок! Видео! И действительно, что делает команда bash `:(){ :|: & };:`? #fun
-* [Не умеете пользоваться Git и Github?](http://try.github.com/levels/1/challenges/1) - интерактивный туториал по его использованию. Похож на кодакадемию, только еще лучше. Кстати, перехватывает кейбинды намертво, закрыть страницу удалось только мышкой :) #github #git #tutor
+* [Не умеете пользоваться Git и Github?](http://try.github.com/levels/1/challenges/1) - интерактивный туториал по его использованию. Похож на кодакадемию, только еще лучше. Кстати, перехватывает кейбинды намертво, закрыть страницу удалось только мышкой. #github #git #tutor
 
 
 ## Для гиков
@@ -51,5 +51,5 @@
 
 ## Видео
 * [Вертикальный корабль отметил свой 50ый день рождения](http://www.bbc.co.uk/news/science-environment-18684075). Очень смешной исследовательский корабль. Заставляет улыбаться нелепости некоторых решений. #fun #science #video
-* [Коротки скринкаст Emacs по мотивам выступлений Брета Виктора](http://emacsrocks.com/e11.html?). Особенного «мотива» я не уловил, но тем кто не видел emacs - полезно будет. #video #emacs
+* [Короткий скринкаст Emacs по мотивам выступлений Брета Виктора](http://emacsrocks.com/e11.html?). Особенного «мотива» я не уловил, но тем, кто не видел emacs - полезно будет. #video #emacs
 
