--- a/source/posts/2012-07-05.md
+++ b/source/posts/2012-07-05.md
@@ -12,7 +12,7 @@
 
 [Петиция на Change.org, которую организовал Филип](http://www.change.org/petitions/ceo-youtube-allow-third-party-recording-tools-for-youtube) и которую подписали на текущий момент уже 309500 человек, просит YouTube разрешить сторонние инструменты, «записывающие эфир».
 
-Мне кажется, всё логично. Человек нашел дырку в юридической защите гугла и теперь туда долбит. Не понимаю, зачем приследовать его юридически, если можно просто забанить? Я за честный бан!
+Мне кажется, всё логично. Человек нашел дырку в юридической защите гугла и теперь туда долбит. Не понимаю, зачем преследовать его юридически, если можно просто забанить? Я за честный бан!
 
 Возможно, Филип последует путем Кима Доткома, который [недавно вышел из предвариловки](http://www.nytimes.com/2012/07/04/technology/megaupload-founder-goes-from-arrest-to-cult-hero.html?_r=3&hp) и теперь пользуется общей любовью. Кстати, скажите, его мегааплоад уже восстановил ранее удаленные файлы?
 
