--- a/source/posts/2012-07-05.md
+++ b/source/posts/2012-07-05.md
@@ -1,40 +1,40 @@
 # Маскарад окончен, остановите музыку
 
-В начале июня Google через юристов потребовал закрытия сайта YouTube-mp3 и еще двух аналогичных сайтов, занимающихся конвертированием роликов с ютуба в форматы mp3 и mp4. Через месяц ребята вернулись со встречным иском, заручившись поддержкой европейских юристов. Более того, петицию к гуглу, с просьбой не закрывать сайт, подписали уже более 300 тысяч человек.
+В начале июня Google через юристов потребовал закрытия сайта YouTube-mp3 и еще двух аналогичных сайтов, занимающихся конвертированием роликов с ютуба в форматы mp3 и mp4. Через месяц ребята вернулись со встречным иском, заручившись поддержкой европейских юристов. Более того, петицию к гуглу с просьбой не закрывать сайт подписали уже более 300 тысяч человек.
 
 ![center](http://chyo.ru/googleyoutubemp3.png)
 
-Дело получается очень шумным. Сайт YouTube-mp3 сам по себе был довольно популярным, судя по статистике, на него заходило до 1.3 миллиона человек в день. Всё пошло не так с самого начала.
+Дело получается очень шумным. Сайт YouTube-mp3 сам по себе был довольно популярным, судя по статистике, на него заходило до 1,3 миллиона человек в день. Всё пошло не так с самого начала.
 
-Сначала Гугл обратился к youtube-mp3 с требованием закрыть проект в семидневный срок. Ну, потребовал и ладно. Однако вместо того, чтобы подождать 7 дней, гуглеры просто забанили доступ к контенту для серверов youtube-mp3. В [своем интервью сайту ТоррентФрик](http://www.readability.com/articles/ypzntuod) владелец сайта, Philip Matesanz, прямо этого не говорит, но, видимо, именно бан и стал той каплей, после которой он решил, что надо идти в суд.
+Сначала Гугл обратился к youtube-mp3 с требованием закрыть проект в семидневный срок. Ну, потребовал и ладно. Однако вместо того, чтобы подождать 7 дней, гуглеры просто забанили доступ к контенту для серверов youtube-mp3. В [своём интервью сайту ТоррентФрик](http://www.readability.com/articles/ypzntuod) владелец сайта, Philip Matesanz, прямо этого не говорит, но, видимо, именно бан и стал той каплей, после которой он решил, что надо идти в суд.
 
-Но, у меня же тут про технологии, да? Вот вам про технологии. Филип работает с очень известным в узких кругах адвокатом - Кристианом Сольмеком. Он, конечно, хорошо изучил пользовательское соглашение на YouTube API. А потом, внезапно, до него дошло. Youtube-mp3 не использует API для доступа к видеороликам, а значит, нарушения ToS нет. Так же сайт не нарушает пользовательское соглашение самого YouTube. И уж конечно, нет причин приследовать проект за нарушение копирайтов, т.к. сервис ничего не знает о файлах и роликах, которые конвертирует. В общем, чист со всех сторон!
+Но, у меня же тут про технологии, да? Вот вам про технологии. Филип работает с очень известным в узких кругах адвокатом - Кристианом Сольмеком. Он, конечно, хорошо изучил пользовательское соглашение на YouTube API. А потом внезапно до него дошло: Youtube-mp3 не использует API для доступа к видеороликам, а, значит, нарушения ToS нет. Также сайт не нарушает пользовательское соглашение самого YouTube. И уж, конечно, нет причин приследовать проект за нарушение копирайтов, т. к. сервис ничего не знает о файлах и роликах, которые конвертирует. В общем, чист со всех сторон!
 
 [Петиция на Change.org, которую организовал Филип](http://www.change.org/petitions/ceo-youtube-allow-third-party-recording-tools-for-youtube) и которую подписали на текущий момент уже 309500 человек, просит YouTube разрешить сторонние инструменты, «записывающие эфир».
 
 Мне кажется, всё логично. Человек нашел дырку в юридической защите гугла и теперь туда долбит. Не понимаю, зачем преследовать его юридически, если можно просто забанить? Я за честный бан!
 
-Возможно, Филип последует путем Кима Доткома, который [недавно вышел из предвариловки](http://www.nytimes.com/2012/07/04/technology/megaupload-founder-goes-from-arrest-to-cult-hero.html?_r=3&hp) и теперь пользуется общей любовью. Кстати, скажите, его мегааплоад уже восстановил ранее удаленные файлы?
+Возможно, Филип последует путем Кима Доткома, который [недавно вышел из предвариловки](http://www.nytimes.com/2012/07/04/technology/megaupload-founder-goes-from-arrest-to-cult-hero.html?_r=3&hp) и теперь пользуется общей любовью. Кстати, скажите, его мегааплоад уже восстановил ранее удалённые файлы?
 
 -----
 
 ## Для всех
-* [Чувак за три дня сделал идею нового брендинга для Майкрософт](http://www.minimallyminimal.com/journal/2012/7/3/the-next-microsoft.html). На месте майкрософта я бы взял чувака на работу. Очень круто, особенно для трехдневной работы. #microsoft #design
-* [Ура! В Европе можно пользоваться slide to unlock без опасений!](http://www.theverge.com/2012/7/4/3136922/apple-htc-uk-high-court-patents-invalid) Суд официально разрешил это делать, как минимум HTC. #apple #lawyers
+* [Чувак за три дня сделал идею нового брендинга для Майкрософт](http://www.minimallyminimal.com/journal/2012/7/3/the-next-microsoft.html). На месте майкрософта я бы взял чувака на работу. Очень круто, особенно для трёхдневной работы. #microsoft #design
+* [Ура! В Европе можно пользоваться slide to unlock без опасений!](http://www.theverge.com/2012/7/4/3136922/apple-htc-uk-high-court-patents-invalid) Суд официально разрешил это делать, как минимум, HTC. #apple #lawyers
 * [Хорошая цитата из раннего Джобса о том, почему важно нанимать самых лучших девелоперов](http://benlakey.com/2012/07/04/why-you-need-to-hire-great-developers-part-2/). Цитата очень многослойная, но есть один пшат, который важнее других: лучшие девелоперы готовы работать вместе, потому что раньше никогда этого не делали. #jobs #apple #developers
-* [Google закрыл еще часть бесполезных проектов](http://techcrunch.com/2012/07/03/google-shutdowns-continue-igoogle-google-video-google-mini-others-are-killed/), в частности igoogle и google video. Искренне завидую. Я вот совсем не умею закрывать проекты. #google #deadpool
+* [Google закрыл еще часть бесполезных проектов](http://techcrunch.com/2012/07/03/google-shutdowns-continue-igoogle-google-video-google-mini-others-are-killed/), в частности, igoogle и google video. Искренне завидую. Я вот совсем не умею закрывать проекты. #google #deadpool
 * [VF Daily: падение майкрософта](http://www.vanityfair.com/online/daily/2012/07/microsoft-downfall-emails-steve-ballmer). О корпоративной культуре, которая разрушила саму корпорацию. Хотя, что-то мне подсказывает, что старушку пока рановато хоронить. Microsoft dead and lovin’ it! #microsoft
 * [Кстати, пинтерест с моргом майкрософта](http://pinterest.com/harrymccracken/microsoft-morgue/). А не спеши ты наааас харанииииить, а у нас ищо туууууут делааааааа… #microsoft #dead
-* [Гейтс в интервью PBS искренне считает, что Apple, возможно, когда-нибудь, выпустит продукт не хуже Surface](http://news.cnet.com/8301-17852_3-57466040-71/gates-apple-may-have-to-make-a-surface-like-device/). Потрясающий оптимизм. Интересно, будет ли пользоваться хоть какой-то популярностью этот гибрид ультрабука с планшетом? #apple #microsoft #surface
-* [Самый дорогой интернет в Америке, где-то в американском Самоа](http://www.engadget.com/2012/07/04/most-expensive-internet-in-america-samoa-broadband-interview/). Сколько вы платите за интернет, кстати?  #internet #cost #usa
+* [Гейтс в интервью PBS искренне считает, что Apple, возможно, когда-нибудь выпустит продукт не хуже Surface](http://news.cnet.com/8301-17852_3-57466040-71/gates-apple-may-have-to-make-a-surface-like-device/). Потрясающий оптимизм. Интересно, будет ли пользоваться хоть какой-то популярностью этот гибрид ультрабука с планшетом? #apple #microsoft #surface
+* [Самый дорогой интернет в Америке - где-то в американском Самоа](http://www.engadget.com/2012/07/04/most-expensive-internet-in-america-samoa-broadband-interview/). Сколько вы платите за интернет, кстати?  #internet #cost #usa
 * [Гугл закрывает свой офис в Атланте](https://plus.google.com/109697072684132989725/posts/WwRaBNhJAch) вместе с продуктом, который там делали. А продукт хороший, про совместное редактирование кода программ. Хорошо, что его выложили в опенсорс, глядишь, кто-нибудь подхватит. #google #deadpool
 
 
 ## На грани
 * [Супер-ревью андроид 4.1 от TheVerge](http://www.theverge.com/2012/7/3/3134347/android-4-1-jelly-bean-review?). Рекомендуется для изучения нового дизайна, а также как подтверждение моих слов «4.1 настолько крутой, что скоро им можно будет пользоваться». #android #mobile
 * [ПейджРанк для оценки стратегии футбольных команд](http://www.technologyreview.com/view/428399/pagerank-algorithm-reveals-soccer-teams/). Сама статья очень поверхностная, лучше посмотрите на оригинальную работу, ссылка в самом низу статьи. #soccer #pagerank #science
-* [Интересный график, показывающий, насколько скакнуло напряжение](http://imgur.com/a/ykoup) в датацентре Hetzner из-за ошибок, связанных с дополнительной секундой на прошлой неделе. Всего из-за leap second Хецнер потратил дополнительный мегаватт энергии. Не мало, да? #leapsecond #hetzner
-* [Прогноз от Марко Эрмента: если до сентября фотки iPad Mini не утекут - в этом году не ждите](http://www.marco.org/2012/07/04/the-ipad-mini). Ставлю на появление новых эплогаджетов к Рождеству! #apple #ipad
+* [Интересный график, показывающий, насколько скакнуло напряжение](http://imgur.com/a/ykoup) в датацентре Hetzner из-за ошибок, связанных с дополнительной секундой на прошлой неделе. Всего из-за leap second Хецнер потратил дополнительный мегаватт энергии. Немало, да? #leapsecond #hetzner
+* [Прогноз Марко Эрмента: если до сентября фотки iPad Mini не утекут - в этом году не ждите](http://www.marco.org/2012/07/04/the-ipad-mini). Ставлю на появление новых эплогаджетов к Рождеству! #apple #ipad
 * [На askUbuntu откопали стюардесу](http://askubuntu.com/questions/159491/why-did-this-command-make-my-system-lag-so-bad-i-had-to-reboot)! Шок! Видео! И действительно, что делает команда bash `:(){ :|: & };:`? #fun
 * [Не умеете пользоваться Git и Github?](http://try.github.com/levels/1/challenges/1) - интерактивный туториал по его использованию. Похож на кодакадемию, только еще лучше. Кстати, перехватывает кейбинды намертво, закрыть страницу удалось только мышкой. #github #git #tutor
 
@@ -43,13 +43,13 @@
 * [Плач автора Reia по поводу ужасов Erlang](http://www.unlimitednovelty.com/2011/07/trouble-with-erlang-or-erlang-is-ghetto.html). В такие моменты я перестаю понимать, зачем он продолжает в этом всём ковыряться. Статья старая, но за год ничерта в эрланге не поправилось в этом смысле. Особенно грустно, что JIT так и не появился. #erlang #code #lang
 * [Джереми Кан предлагает не забывать, что javascript’у уже 30 лет](http://jeremyckahn.github.com/blog/2012/07/01/treating-javascript-like-a-30-year-old-language/) и программировать на нем надо в старом стиле. Я пишу еще более старомодно, поэтому программисты клайентсайда обычно бьют меня по рукам. #javascript #language #code
 * [Что такое «Монады» - перевод куска документации хаскеля на джаваскрипт](http://blog.jcoglan.com/2011/03/05/translation-from-haskell-to-javascript-of-selected-portions-of-the-best-introduction-to-monads-ive-ever-read/). Действительно понятно разжевано, хотя можно было то же самое и на хаскеле почитать, не так уж сложно. #haskel #monad #javascript
-* Кто у меня спрашивал, как деплоиться git’ом? [Вот хороший рецепт](http://blog.jmoz.co.uk/deploy-git-push-php-silex), слова php и silex там можно пропускать. #git #deploy
-* Хороший, годный наброс на вентилятор на тему [«PHP в общем-то хороший язык»](http://fabien.potencier.org/article/64/php-is-much-better-than-what-you-think). Вся прелесть наброса убивается последним предложением в посте - автор обещает удалять все грубые каменты. #php #must #die
+* Кто у меня спрашивал как деплоиться git’ом? [Вот хороший рецепт](http://blog.jmoz.co.uk/deploy-git-push-php-silex), слова php и silex там можно пропускать. #git #deploy
+* Хороший, годный наброс на вентилятор на тему [«PHP, в общем-то, хороший язык»](http://fabien.potencier.org/article/64/php-is-much-better-than-what-you-think). Вся прелесть наброса убивается последним предложением в посте - автор обещает удалять все грубые каменты. #php #must #die
 * В конце прошлой недели [Линус](http://en.wikipedia.org/wiki/Linus_Torvalds) выпустил 3.5-rc5. Небольшой [обзор изменений в сетевой подсистеме, которые нас ждут в 3.5](http://www.h-online.com/open/features/Kernel-Log-Coming-in-Linux-3-5-Part-1-Networking-1625047.html) [via @hostmaster](http://twitter.com/hostmaster) #linux
-* В продолжение недавнего разговора про «MVC или MOVE» - [хорошая альтернатива это просто конечный автомат](http://ingoschramm.tumblr.com/post/26409997578/mvc-move-or-simply-a-state-machine). Ну, точнее, Вид и Конечный Автомат. Красивое решение. #fsm #mvc
+* В продолжение недавнего разговора про «MVC или MOVE»: [хорошая альтернатива - это просто конечный автомат](http://ingoschramm.tumblr.com/post/26409997578/mvc-move-or-simply-a-state-machine). Ну, точнее, Вид и Конечный Автомат. Красивое решение. #fsm #mvc
 * [Питонистам: импорт питоновых модулей сразу с гитхаба.](https://github.com/xando/github_import). Богатая тема, наколеночное решение, всё, как я люблю. В ближайшее время в паре проектов опробую. Да вот, хоть вот в этом. #python #github #import
 
 ## Видео
-* [Вертикальный корабль отметил свой 50ый день рождения](http://www.bbc.co.uk/news/science-environment-18684075). Очень смешной исследовательский корабль. Заставляет улыбаться нелепости некоторых решений. #fun #science #video
+* [Вертикальный корабль отметил свой 50 день рождения](http://www.bbc.co.uk/news/science-environment-18684075). Очень смешной исследовательский корабль. Заставляет улыбаться нелепости некоторых решений. #fun #science #video
 * [Короткий скринкаст Emacs по мотивам выступлений Брета Виктора](http://emacsrocks.com/e11.html?). Особенного «мотива» я не уловил, но тем, кто не видел emacs - полезно будет. #video #emacs
 
