--- a/source/posts/2012-07-05.md
+++ b/source/posts/2012-07-05.md
@@ -6,9 +6,9 @@
 
 Дело получается очень шумным. Сайт YouTube-mp3 сам по себе был довольно популярным, судя по статистике, на него заходило до 1,3 миллиона человек в день. Всё пошло не так с самого начала.
 
-Сначала Гугл обратился к youtube-mp3 с требованием закрыть проект в семидневный срок. Ну, потребовал и ладно. Однако вместо того, чтобы подождать 7 дней, гуглеры просто забанили доступ к контенту для серверов youtube-mp3. В [своём интервью сайту ТоррентФрик](http://www.readability.com/articles/ypzntuod) владелец сайта, Philip Matesanz, прямо этого не говорит, но, видимо, именно бан и стал той каплей, после которой он решил, что надо идти в суд.
+Сначала Гугл обратился к youtube-mp3 с требованием закрыть проект в семидневный срок. Ну, потребовал и ладно. Однако, вместо того, чтобы подождать 7 дней, гуглеры просто забанили доступ к контенту для серверов youtube-mp3. В [своём интервью сайту ТоррентФрик](http://www.readability.com/articles/ypzntuod) владелец сайта, Philip Matesanz, прямо этого не говорит, но, видимо, именно бан и стал той каплей, после которой он решил, что надо идти в суд.
 
-Но, у меня же тут про технологии, да? Вот вам про технологии. Филип работает с очень известным в узких кругах адвокатом - Кристианом Сольмеком. Он, конечно, хорошо изучил пользовательское соглашение на YouTube API. А потом внезапно до него дошло: Youtube-mp3 не использует API для доступа к видеороликам, а, значит, нарушения ToS нет. Также сайт не нарушает пользовательское соглашение самого YouTube. И уж, конечно, нет причин приследовать проект за нарушение копирайтов, т. к. сервис ничего не знает о файлах и роликах, которые конвертирует. В общем, чист со всех сторон!
+Но, у меня же тут про технологии, да? Вот вам про технологии. Филип работает с очень известным в узких кругах адвокатом - Кристианом Сольмеком. Он, конечно, хорошо изучил пользовательское соглашение на YouTube API. А потом внезапно до него дошло: Youtube-mp3 не использует API для доступа к видеороликам, а, значит, нарушения ToS нет. Также сайт не нарушает пользовательское соглашение самого YouTube. И уж, конечно, нет причин преследовать проект за нарушение копирайтов, т.к. сервис ничего не знает о файлах и роликах, которые конвертирует. В общем, чист со всех сторон!
 
 [Петиция на Change.org, которую организовал Филип](http://www.change.org/petitions/ceo-youtube-allow-third-party-recording-tools-for-youtube) и которую подписали на текущий момент уже 309500 человек, просит YouTube разрешить сторонние инструменты, «записывающие эфир».
 
