--- a/source/posts/2012-07-06.md
+++ b/source/posts/2012-07-06.md
@@ -2,9 +2,13 @@
 
 На правах пятницы - два коротких, но поучительных намека.
 
+## История №1
+
 Пачка ученых Монреальского университета решили проверить, отличаются ли цветовое восприятие мужчин, которые смотрели порно, от мужчин, которые не смотрели подобных фильмов. Почему именно мужчин? Дело в том, что нарушения восприятия цвета невероятно редки среди женщин. Дальтонизм вообще передается по наследству, но влияет только на мужских особей.
 
 Для эксперимента были выбраны более 2 тысяч студентов, возрастом до 20 лет. Но опыт с ужасным треском провалился. Среди 2.5 тысяч не нашлось ни одного студента мужского пола, который бы ни разу не смотрел порно.
+
+## История №2
 
 ![center](http://chyo.ru/homer-marketing.jpg)
 
