--- a/source/posts/2012-07-06.md
+++ b/source/posts/2012-07-06.md
@@ -4,9 +4,9 @@
 
 ## История №1
 
-Пачка ученых Монреальского университета решили проверить, отличаются ли цветовое восприятие мужчин, которые смотрели порно, от мужчин, которые не смотрели подобных фильмов. Почему именно мужчин? Дело в том, что нарушения восприятия цвета невероятно редки среди женщин. Дальтонизм вообще передается по наследству, но влияет только на мужских особей.
+Пачка ученых Монреальского университета решили проверить, отличается ли цветовое восприятие мужчин, которые смотрели порно, от восприятия мужчин, которые не смотрели подобных фильмов. Почему именно мужчин? Дело в том, что нарушения восприятия цвета невероятно редки среди женщин. Дальтонизм вообще передается по наследству, но влияет только на мужских особей.
 
-Для эксперимента были выбраны более 2 тысяч студентов, возрастом до 20 лет. Но опыт с ужасным треском провалился. Среди 2.5 тысяч не нашлось ни одного студента мужского пола, который бы ни разу не смотрел порно.
+Для эксперимента было выбрано более 2 тысяч студентов возрастом до 20 лет. Но опыт с ужасным треском провалился. Среди двух тысяч не нашлось ни одного студента мужского пола, который бы ни разу не смотрел порно.
 
 ## История №2
 
@@ -19,22 +19,22 @@
 
 * [Инфографика "как владельцы андроидофонов их используют"](http://mashable.com/2012/07/04/how-android-phone-owners-use-their-devices-infographic/). Вы не поверите, с них звонят! #android #mobile
 * [Жизнь на глубине ниже 600 пикселов](http://iampaddy.com/lifebelow600/). Показательная страница о том, как выглядят все эти бесконечно тянущиеся вниз сайты. И мой, в том числе, такой. #design
-* [Сколько стоит новый топовый макбук про в разных странах](http://frabjousdei.net/post/25718889747/retina-macbook-pro-international-pricing)? Самый дешевый - в Гонконге - $2970. Самый дорогой - в Бразилии - $4058. У нас еще ничего получается, да. #apple #price
-* [На DigitalTrends отличная статья "всё, что вам надо знать о Firefox OS"](http://www.digitaltrends.com/mobile/firefox-os-can-mozilla-move-to-mobile-phones/). Главное не сбавлять темп, должна же быть хоть одна настоящая опенсорс мобильная ОС. #mozilla #firefoxos
+* [Сколько стоит новый топовый макбук про в разных странах](http://frabjousdei.net/post/25718889747/retina-macbook-pro-international-pricing)? Самый дешёвый - в Гонконге - $2970. Самый дорогой - в Бразилии - $4058. У нас ещё ничего получается, да. #apple #price
+* [На DigitalTrends отличная статья "всё, что вам надо знать о Firefox OS"](http://www.digitaltrends.com/mobile/firefox-os-can-mozilla-move-to-mobile-phones/). Главное - не сбавлять темп, должна же быть хоть одна настоящая опенсорс мобильная ОС. #mozilla #firefoxos
 * [Локскрин от Firefox OS подозрительно напоминает Android4.1](http://www.knowyourmobile.com/blog/1468217/first_shot_of_mozillas_firefox_os_appears_on_twitter.html). Молодцы в Мозилле, быстро копируют! #mozilla #firefoxos
 * [Слот-машина с логотипами браузеров](http://www.i-marco.nl/stuff/html5gambling/). Не остановился, пока не выкинул три сафари. А вам слабо? #safari #game
 * [Как Фейсбук разрабатывает сервисы](http://framethink.wordpress.com/2011/01/17/how-facebook-ships-code/) - собрали информацию с мира по нитке. Если всё это правда - не удивительно, что из гугла бегут в фейсбук. Там же как в раннем гугле, культ инженерии. #facebook #hr #google
-* [FreeNode всё еще растет по аудитории](http://www.irc-junkie.org/2012-03-04/freenode-is-still-growing/). А вы говорите "IRC вымерли"… Да они пока живее всех живых! #irc #freenode
-* [Скалатрон - запрограммируй своего бота!](http://scalatron.github.com) - веселая игра, программирование на скала. Понятно, что написано на самой скале, да? #scala #game
-* [Простые советы по использованию систем контроля версий](http://kevinpelgrims.com/blog/2012/07/05/version-control-best-practices). Вроде бы очевидные вещи, но приятно когда он все в одном месте. И да, я всегда слежу за чужими коммитами. Это правильная паранойя. #vcs #koan
+* [FreeNode всё ещё растет по аудитории](http://www.irc-junkie.org/2012-03-04/freenode-is-still-growing/). А вы говорите "IRC вымерли"… Да они пока живее всех живых! #irc #freenode
+* [Скалатрон - запрограммируй своего бота!](http://scalatron.github.com) - весёлая игра, программирование на скала. Понятно, что написано на самой скале, да? #scala #game
+* [Простые советы по использованию систем контроля версий](http://kevinpelgrims.com/blog/2012/07/05/version-control-best-practices). Вроде бы очевидные вещи, но приятно, когда они все в одном месте. И да, я всегда слежу за чужими коммитами. Это правильная паранойя. #vcs #koan
 * [Первые шаги в науке работы с данными](http://blog.untrod.com/2012/07/getting-started-with-python-for-data.html) - понятный туториал на питоне с scikit-learn и scipy. #python #svm
 * [Sidetap - простенький фреймворк для создания мобильных сайтов](http://sidetap.it). Ну, совсем простенький. Надо подумать, что я хочу на нем сделать… #mobile #dev #javascript
 * [Демо для WebGL, позволяющее управлять типовым человечком из майнкрафта](http://learningthreejs.com/blog/2012/07/05/minecraft-character-in-webgl/). Все никак не соберусь проверить, что это за зверь, этот самый WebGL. #webgl #code #html
-* [Opera Dragonfly переехал на GitHub](http://my.opera.com/dragonfly/blog/opera-dragonfly-source-now-on-github). В этот момент я узнал, что дрэгонфлай опенсорсный. И вообще, оказывается Опера теперь много выкладывает в опенсорс. #opera #dev #dragonfly
-* [3scale подробно рассказали как запустить ipv6 на своем EC2](http://3scale.github.com/2012/06/29/enabling-ipv6-on-amazon-ec2/). Не понимаю пока зачем, но видимо в закладки. #ipv6 #ec2 #amazon
+* [Opera Dragonfly переехал на GitHub](http://my.opera.com/dragonfly/blog/opera-dragonfly-source-now-on-github). В этот момент я узнал, что дрэгонфлай - опенсорсный. И вообще, оказывается, Опера теперь много выкладывает в опенсорс. #opera #dev #dragonfly
+* [3scale подробно рассказали, как запустить ipv6 на своем EC2](http://3scale.github.com/2012/06/29/enabling-ipv6-on-amazon-ec2/). Не понимаю пока, зачем, но, видимо, в закладки. #ipv6 #ec2 #amazon
 
 ## Видео
 * [Стив Кондик от лица команды ЦианогенМод](http://www.youtube.com/watch?v=puSdhvC0ExY) рассказывает о проблемах и том, как разрабатывается цианоген. Особенно интересно как они переживают каждый новый релиз андроида. #cyanogen #android #mobile #video
 * [Муахаха! В Сан-Диего случайно выстрелили ВСЕМИ феерверками ОДНОВРЕМЕННО](http://www.theatlanticwire.com/national/2012/07/san-deigo-accidentally-set-all-its-fireworks-same-time/54194/). Маленькое солнышко такое, наверное, из космоса хорошо смотрелось. #video #fun
 * [10 принципов создания успешного веб-приложения](http://app.arcticfoxtv.com/d/onbxr). Так и не понял, кто автор. Слегка затянуто, можете включить и оставить фоном. #video #code
-* [видео или слайды: "секреты Git и GitHub"](http://zachholman.com/talk/git-github-secrets). Я дебил. Оказывается на письма гитхаба можно отвечать прямо из почты. #github #git #howto #video
+* [видео или слайды: "секреты Git и GitHub"](http://zachholman.com/talk/git-github-secrets). Я дебил. Оказывается, на письма гитхаба можно отвечать прямо из почты. #github #git #howto #video
