Typo мерять --> мерить

--- a/source/posts/2012-07-09.md
+++ b/source/posts/2012-07-09.md
@@ -17,7 +17,7 @@
 
 Казалось бы, не так и много. Однако сейчас я уже не вижу смысла пользоваться каким-то другим поисковиком для новостных запросов и вещей, про которые мне нужно знать только свежак.
 
-Этот запуск Твиттера встает поперек горла двум компаниям - гуглу и линкедину. Первому потому, что по сути твиттер легким движением руки стал сильным игроком на поисковом рынке. Надо теперь мерять его долю и смотреть, жизнеспособны ли самостоятельные небольшие поисковые системы.
+Этот запуск Твиттера встает поперек горла двум компаниям - гуглу и линкедину. Первому потому, что по сути твиттер легким движением руки стал сильным игроком на поисковом рынке. Надо теперь мерить его долю и смотреть, жизнеспособны ли самостоятельные небольшие поисковые системы.
 Второму, линкедину, твиттер перешел дорогу еще весной, наняв двух сильнейших людей из линкедина - специалиста по поиску [Джона Вонга](http://www.linkedin.com/in/javasoze) и директора по поиску и релевантности [Руслана Белкина](http://www.linkedin.com/in/rbelkin). Эти два человека способны свернуть горы, как мне кажется.
 
 Лично я теперь рассматриваю твиттер, как Г+ наоборот. Не "поиск с добавкой соцсети", а "сильная и самостоятельная соцсеть с отличным поиском". Интересно, что ни фейсбук, ни вконтакт не осилили создать такой мощный продукт. А ведь в нем деньги, и немалые.
