--- a/source/posts/2012-07-09.md
+++ b/source/posts/2012-07-09.md
@@ -1,6 +1,7 @@
 # Социальный, реалтаймовый и поиск
 
-> *Голосом Левитана*
+**Голосом Левитана:**
+
 > Граждане и гражданки Великого Интернета! 
 > Гуглёвское правительство и его глава тов. Бринн поручили мне сделать следующее заявление: 
 > Сегодня, в 4 часа утра, без предъявления каких-либо претензий к нашему продукту, без объявления войны, войска твиттера напали на нашу страну, атаковали наши границы во многих местах и подвергли бомбежке со своих самолетов наши города - Социальный поиск, Реалтаймовый поиск, Поиск по новостям и некоторые другие, причем убито и ранено…
