Чиби on new line
Hopefully will not auto-merge :)

--- a/source/posts/2012-07-18.md
+++ b/source/posts/2012-07-18.md
@@ -23,7 +23,8 @@
 ## Для гиков
 * Могло бы стать новостью дня, если бы небыло так грустно: [твиттер мертво падал и не работал в Opera](http://my.opera.com/hallvors/blog/2012/07/17/twitter-crashes-itself-with-commas?1), <s>но всем пофиг</s>. Вот так одна запятая иногда решает судьбу браузера. #twitter #opera #fail
 * [У дропбокса утекли email-ы всех платных аккаунтов](http://forums.dropbox.com/topic.php?id=64367). Но! Видите какие они молодцы? Только емейлы, ничего больше. #hack #dropbox
-* [Бесплатные средства для мониторинга сайтов хороши, но не достаточны](http://copperegg.com/why-free-website-monitoring-is-good-but-not-good-enough/). Такая, не практическая статья, но я с ней очень согласен, особенно когда речь идет об «облачных» решениях. #monitoring* [Чиби - очередной очень маленький фреймворк для манипуляций с DOM](https://github.com/kylebarrow/chibi). 5 килобайт суммарного размера. Синтаксис по большей части идентичен jQuery, но есть детали #javascript #html
+* [Бесплатные средства для мониторинга сайтов хороши, но не достаточны](http://copperegg.com/why-free-website-monitoring-is-good-but-not-good-enough/). Такая, не практическая статья, но я с ней очень согласен, особенно когда речь идет об «облачных» решениях. #monitoring
+* [Чиби - очередной очень маленький фреймворк для манипуляций с DOM](https://github.com/kylebarrow/chibi). 5 килобайт суммарного размера. Синтаксис по большей части идентичен jQuery, но есть детали #javascript #html
 * Хехе! [Разработчики игры Armed Heroes решили не платить дизайнеру, а просто сперли модели монстров из Torchlight](http://www.geek.com/articles/games/torchlight-art-assets-stolen-used-in-ios-game-armed-heroes-20120717/). Дело самсунга цветет и пахнет! #mobile #hack
 * [Гайд начального уровня про то, как правильно задеплоить node.js на амазон](http://www.jmanzano.es/blog/?p=411). Ну вдруг вам надо? #node #amazon
 * [Путешествие в мир функциональщины с Ruby](http://www.naildrivin5.com/blog/2012/07/17/adventures-in-functional-programming-with-ruby.html). Хороший, нет, правда хороший туториал по функциональному программированию для тех, кто привык жить в процедурном стиле. #ruby #functional
