пара правок для теста автодеплоя

--- a/source/posts/2012-07-18.md
+++ b/source/posts/2012-07-18.md
@@ -1,10 +1,10 @@
-# Капслок: мешает вводить пароль с 1980года
+# Капслок: мешает вводить пароль с 1980 года
 
 Тут была статья про новый Microsoft Office. Но я её решил написать в самом офисе. Классическая ошибка, да? В общем, не будет сегодня темы дня.
 
 ![center](http://main.makeuseoflimited.netdna-cdn.com/wp-content/uploads/2010/12/OneLineJokes03.png?323f2c)
 
-Зато сегодня ОГРОМНЫЙ раздел от читателей, спасибо всем кто прислал ссылки!
+Зато сегодня ОГРОМНЫЙ раздел от читателей, спасибо всем, кто прислал ссылки!
 
 -----
 
