Добавил строчку с просьбой присылать еще.

--- a/source/posts/2012-07-18.md
+++ b/source/posts/2012-07-18.md
@@ -58,3 +58,5 @@
 
 ### [via @syndicut](http://github.com/syndicut)
 * [CanTail.Me](http://cantail.me/). tail -f в браузере, с открытым исходным кодом. *Очень красивое, хотя и довольно простое решение* #code
+
+*Присылайте свое ссылки, пожалуйста!*
