--- a/source/posts/2012-07-18.md
+++ b/source/posts/2012-07-18.md
@@ -59,4 +59,4 @@
 ### [via @syndicut](http://github.com/syndicut)
 * [CanTail.Me](http://cantail.me/). tail -f в браузере, с открытым исходным кодом. *Очень красивое, хотя и довольно простое решение* #code
 
-*Присылайте свое ссылки, пожалуйста!*
+*Присылайте свои ссылки, пожалуйста!*
