--- a/source/posts/2012-07-18.md
+++ b/source/posts/2012-07-18.md
@@ -9,32 +9,32 @@
 -----
 
 ## Для всех
-* [Инсайдерская история: почему у Кевина Роуза никогда небыло явных хитов](http://www.businessinsider.com/digg-kevin-rose-untold-history-2012-7?op=1). Хотя, прочитав статью, я бы так не сказал конечно. А глядя на список его вложений. #rose #digg
+* [Инсайдерская история: почему у Кевина Роуза никогда не было явных хитов](http://www.businessinsider.com/digg-kevin-rose-untold-history-2012-7?op=1). Хотя, прочитав статью, я бы так не сказал, конечно. А глядя на список его вложений. #rose #digg
 * [Смешно и на русском: движение по борьбе с педофилами требует закрыть вконтакте](http://www.ridus.ru/news/39961/). Новость очень желтая, там даже Чаплин есть. #vk #gov
-* [Еще один «всё понял»](https://www.blurity.com/blog/2012/07/17/how-i-converted-a-software-thief-into-a-customer/). Продавая коробочный продукт надо изначально уметь работать с теми, кто ворует софт. Предлагать 66% скидки тем, кто вводит популярный ворованный серийник - хорошее дело, но не слишком ли дорого? #hack #money
+* [Еще один «всё понял»](https://www.blurity.com/blog/2012/07/17/how-i-converted-a-software-thief-into-a-customer/). Продавая коробочный продукт, надо изначально уметь работать с теми, кто ворует софт. Предлагать 66% скидки тем, кто вводит популярный ворованный серийник - хорошее дело, но не слишком ли дорого? #hack #money
 * [Что в новом Microsoft Office сделано неправильно](http://www.fastcodesign.com/1670308/what-the-new-microsoft-office-gets-wrong). Больше со стороны дизайна, нежели со стороны функций, но тем не менее. #office
 * И вообще не день Microsoft: [в следствии «технической ошибки» в Win7 SP1 не показывается диалог выбора браузера](http://arstechnica.com/tech-policy/2012/07/windows-7-sp1-technical-error-violated-microsofts-antitrust-deal/), а это нарушает соглашение между MS и антимонопольным комитетом. Ох, кому-то достанется опять на орехи. #ms #browser
-* [Микрообзор действий, предпринимаемых браузерами для популяризации своей безопасности](http://nakedsecurity.sophos.com/2012/07/16/which-browser-is-safest-the-browser-wars-are-back-and-this-time-you-win/). Все это смешно, конечно, но раз браузеры глобально не отличаются внешне - ищут даже вот такие способы прославиться. #browser
-* [Компания Parallels заманила в свои <s>сети</s> совет директоров Бертранда Серлета](http://allthingsd.com/20120716/former-apple-vp-bertrand-serlet-joins-board-of-parallels/). Вообще, компания с сосисками на логотипе последнее время выглядит очень круто и появление ветерана Apple в совете директоров - хороший шаг. Его перфекционизм мягко говоря не помешает. Кстати, [в ответ на это VMWare объявили о замене CEO!](http://www.wired.com/wiredenterprise/2012/07/vmware-shakeup/) :) #parallels #serlet
+* [Микрообзор действий, предпринимаемых браузерами для популяризации своей безопасности](http://nakedsecurity.sophos.com/2012/07/16/which-browser-is-safest-the-browser-wars-are-back-and-this-time-you-win/). Все это смешно, конечно, но, раз браузеры глобально не отличаются внешне - ищут даже вот такие способы прославиться. #browser
+* [Компания Parallels заманила в свои <s>сети</s> совет директоров Бертранда Серлета](http://allthingsd.com/20120716/former-apple-vp-bertrand-serlet-joins-board-of-parallels/). Вообще, компания с сосисками на логотипе последнее время выглядит очень круто и появление ветерана Apple в совете директоров - хороший шаг. Его перфекционизм, мягко говоря, не помешает. Кстати, [в ответ на это VMWare объявили о замене CEO!](http://www.wired.com/wiredenterprise/2012/07/vmware-shakeup/) :) #parallels #serlet
 * [Ребята из Basho получили инвестиции и крупный заказ](http://gigaom.com/cloud/nosql-startup-basho-raises-11-1m-and-storms-japan/). Это создатели Riak, если что. Удивительно, как бы я не ужасался эрлангу - деньги он создателям приносит хорошо. #riak #startup
 * [Почему ушла Марисса? Потому что пришлось](http://venturebeat.com/2012/07/17/marissa-mayer-yahoo/). Длинная телега о том, как нелегко приходилось Мариссе и почему она сейчас в Yahoo. Спорная статья, попробую сегодня написать или перевести что-нибудь более полезное по этому поводу. #marissa #yahoo
 * [Автодеск подтвердил покупку 100% компании Socialcam](http://techcrunch.com/2012/07/17/socialcam-autodesk-60-million/). Схема работает: строишь компанию про распространение мультимедии на основе фейсбука, заставляешь людей спамить окружающих, …, профит! #socialcam #autodesk
 
 ## Для гиков
-* Могло бы стать новостью дня, если бы небыло так грустно: [твиттер мертво падал и не работал в Opera](http://my.opera.com/hallvors/blog/2012/07/17/twitter-crashes-itself-with-commas?1), <s>но всем пофиг</s>. Вот так одна запятая иногда решает судьбу браузера. #twitter #opera #fail
+* Могло бы стать новостью дня, если бы не было так грустно: [твиттер мертво падал и не работал в Opera](http://my.opera.com/hallvors/blog/2012/07/17/twitter-crashes-itself-with-commas?1), <s>но всем пофиг</s>. Вот так одна запятая иногда решает судьбу браузера. #twitter #opera #fail
 * [У дропбокса утекли email-ы всех платных аккаунтов](http://forums.dropbox.com/topic.php?id=64367). Но! Видите какие они молодцы? Только емейлы, ничего больше. #hack #dropbox
 * [Бесплатные средства для мониторинга сайтов хороши, но не достаточны](http://copperegg.com/why-free-website-monitoring-is-good-but-not-good-enough/). Такая, не практическая статья, но я с ней очень согласен, особенно когда речь идет об «облачных» решениях. #monitoring
-* [Чиби - очередной очень маленький фреймворк для манипуляций с DOM](https://github.com/kylebarrow/chibi). 5 килобайт суммарного размера. Синтаксис по большей части идентичен jQuery, но есть детали #javascript #html
+* [Чиби - очередной очень маленький фреймворк для манипуляций с DOM](https://github.com/kylebarrow/chibi). 5 килобайт суммарного размера. Синтаксис по большей части идентичен jQuery, но есть детали. #javascript #html
 * Хехе! [Разработчики игры Armed Heroes решили не платить дизайнеру, а просто сперли модели монстров из Torchlight](http://www.geek.com/articles/games/torchlight-art-assets-stolen-used-in-ios-game-armed-heroes-20120717/). Дело самсунга цветет и пахнет! #mobile #hack
 * [Гайд начального уровня про то, как правильно задеплоить node.js на амазон](http://www.jmanzano.es/blog/?p=411). Ну вдруг вам надо? #node #amazon
 * [Путешествие в мир функциональщины с Ruby](http://www.naildrivin5.com/blog/2012/07/17/adventures-in-functional-programming-with-ruby.html). Хороший, нет, правда хороший туториал по функциональному программированию для тех, кто привык жить в процедурном стиле. #ruby #functional
-* Всё может быть дешевле всего, главное придумать как считать. [Макбук с Ретиной оказывается дешевле старой Про](http://danbarber.me/the-retina-macbook-pro-is-cheaper-than-the-regular-macbook-pro/), Ну, точнее дороже, на 150 долларов :) #apple #fun
+* Всё может быть дешевле всего, главное — придумать, как считать. [Макбук с Ретиной оказывается дешевле старой Про](http://danbarber.me/the-retina-macbook-pro-is-cheaper-than-the-regular-macbook-pro/), Ну, точнее, дороже, на 150 долларов :) #apple #fun
 * [Создать продукт, который превращает недостатки в достоинства](http://ninjasandrobots.com/design-a-product) - это можно, но пример git там не очень удачен. Это скорее не про технологии, а про продукт. #design
-* [Как использовать spotlight из командной строки](http://0xfe.blogspot.com/2006/03/using-spotlight-from-os-x-commandline.html), для тех кто не освоил mdfind. #osx #spotlight
+* [Как использовать spotlight из командной строки](http://0xfe.blogspot.com/2006/03/using-spotlight-from-os-x-commandline.html), для тех, кто не освоил mdfind. #osx #spotlight
 
 
 ## Разное
-* [Ликую вместе с фанатами Лэрри Кинга: он вернулся!](http://paidcontent.org/2012/07/17/larry-king-returns-new-show-kicks-off-on-hulu-tuesday/). Тема неожиданная, потому, что судя по всему, он возвращается только на Hulu Plus, в платном разделе. #hulu
+* [Ликую вместе с фанатами Лэрри Кинга: он вернулся!](http://paidcontent.org/2012/07/17/larry-king-returns-new-show-kicks-off-on-hulu-tuesday/). Тема неожиданная, потому что, судя по всему, он возвращается только на Hulu Plus, в платном разделе. #hulu
 * [Ну наконец-то, почти настоящее решение для слабовидящих](http://www.extremetech.com/extreme/132918-the-laser-powered-bionic-eye-that-gives-576-pixel-grayscale-vision-to-the-blind) - электрический, чернобелый глаз, подключаемый прямо к нервам сетчатки.
 
 ## От читателей
@@ -47,7 +47,7 @@
 * [Бесконечный спор о плюсах и минусах "гибридных" приложений для мобильных](http://www.cocoacontrols.com/posts/a-primer-on-hybrid-apps-for-ios) на примере айфона.
 
 ### [via @melonamin](http://github.com/melonamin)
-* Вышел [SourceTree 1.5](http://blog.bitbucket.org/2012/07/17/sourcetree-1-5-going-with-the-flow/), визуальный git-клиент для OS X. Главная фишка новой версии - поддержка [git-flow](http://nvie.com/posts/a-successful-git-branching-model/). *Кажется, это первый визуальный гит-клиент с поддержкой flow, да?* #git #flow #osx
+* Вышел [SourceTree 1.5](http://blog.bitbucket.org/2012/07/17/sourcetree-1-5-going-with-the-flow/), визуальный git-клиент для OS X. Главная фишка новой версии - поддержка [git-flow](http://nvie.com/posts/a-successful-git-branching-model/). *Кажется, это первый визуальный гит-клиент с поддержкой flow, да?* Кстати, если вы его ставили через AppStore, наберитесь терпения, там его еще нет. #git #flow #osx
 
 ### [via @mikola](http://github.com/mikola)
 * [Что общего](http://www.troyhunt.com/2012/07/what-do-sony-and-yahoo-have-in-common.html) у Sony и Yahoo? Пароли! Трой Хант собрал небольшую статистику при сравнении базы паролей Sony, взломанной год назад, и базой Yahoo! Voice, взломанной сегодня. Один из выводов — 59% пользователей всё ещё использовали один и тот же пароль. #security
@@ -59,4 +59,5 @@
 ### [via @syndicut](http://github.com/syndicut)
 * [CanTail.Me](http://cantail.me/). tail -f в браузере, с открытым исходным кодом. *Очень красивое, хотя и довольно простое решение* #code
 
-*Присылайте свои ссылки, пожалуйста!*
+*Присылайте свое ссылки, пожалуйста!*
+
