--- a/source/posts/2012-07-18.md
+++ b/source/posts/2012-07-18.md
@@ -15,7 +15,7 @@
 * [Что в новом Microsoft Office сделано неправильно](http://www.fastcodesign.com/1670308/what-the-new-microsoft-office-gets-wrong). Больше со стороны дизайна, нежели со стороны функций, но тем не менее. #office
 * И вообще не день Microsoft: [в следствии «технической ошибки» в Win7 SP1 не показывается диалог выбора браузера](http://arstechnica.com/tech-policy/2012/07/windows-7-sp1-technical-error-violated-microsofts-antitrust-deal/), а это нарушает соглашение между MS и антимонопольным комитетом. Ох, кому-то достанется опять на орехи. #ms #browser
 * [Микрообзор действий, предпринимаемых браузерами для популяризации своей безопасности](http://nakedsecurity.sophos.com/2012/07/16/which-browser-is-safest-the-browser-wars-are-back-and-this-time-you-win/). Все это смешно, конечно, но, раз браузеры глобально не отличаются внешне - ищут даже вот такие способы прославиться. #browser
-* [Компания Parallels заманила в свои <s>сети</s> совет директоров Бертранда Серлета](http://allthingsd.com/20120716/former-apple-vp-bertrand-serlet-joins-board-of-parallels/). Вообще, компания с сосисками на логотипе последнее время выглядит очень круто и появление ветерана Apple в совете директоров - хороший шаг. Его перфекционизм, мягко говоря, не помешает. Кстати, [в ответ на это VMWare объявили о замене CEO!](http://www.wired.com/wiredenterprise/2012/07/vmware-shakeup/) :) #parallels #serlet
+* [Компания Parallels заманила в <s>свои сети</s> свой совет директоров Бертранда Серлета](http://allthingsd.com/20120716/former-apple-vp-bertrand-serlet-joins-board-of-parallels/). Вообще, компания с сосисками на логотипе последнее время выглядит очень круто и появление ветерана Apple в совете директоров - хороший шаг. Его перфекционизм, мягко говоря, не помешает. Кстати, [в ответ на это VMWare объявили о замене CEO!](http://www.wired.com/wiredenterprise/2012/07/vmware-shakeup/) :) #parallels #serlet
 * [Ребята из Basho получили инвестиции и крупный заказ](http://gigaom.com/cloud/nosql-startup-basho-raises-11-1m-and-storms-japan/). Это создатели Riak, если что. Удивительно, как бы я не ужасался эрлангу - деньги он создателям приносит хорошо. #riak #startup
 * [Почему ушла Марисса? Потому что пришлось](http://venturebeat.com/2012/07/17/marissa-mayer-yahoo/). Длинная телега о том, как нелегко приходилось Мариссе и почему она сейчас в Yahoo. Спорная статья, попробую сегодня написать или перевести что-нибудь более полезное по этому поводу. #marissa #yahoo
 * [Автодеск подтвердил покупку 100% компании Socialcam](http://techcrunch.com/2012/07/17/socialcam-autodesk-60-million/). Схема работает: строишь компанию про распространение мультимедии на основе фейсбука, заставляешь людей спамить окружающих, …, профит! #socialcam #autodesk
