Grammatic fix in "Для гиков".3

--- a/source/posts/2012-07-19.md
+++ b/source/posts/2012-07-19.md
@@ -36,7 +36,7 @@
 ## Для гиков
 * [Проект Спутник от Dell запустился](http://techcrunch.com/2012/07/18/dell-gives-linux-laptops-another-chance/) - теперь dell официально продает ноутбуки с Linux на борту. С поддержкой и всем таким. Может быть теперь у линукса появится шанс на светлое десктопное будущее? #dell #sputnik #linux
 * [Gist.io - суперсервис для создания нормальной страницы из gist гитхаба](http://gist.io). Как мне кажется, нужен в основном для вставки длинной портянки текста в твиттер. Другой цели не вижу пока. А вы? #gist #github
-* [Еще одна рекомендация, как использовать tmux для парного программирования](http://pivotallabs.com/users/joe/blog/articles/2199-how-we-use-tmux-for-remote-pair-programming-). Надо попробовать, хотя не так много людей готоы программировать со мной в emacs/vim. #tmux #pp
+* [Еще одна рекомендация, как использовать tmux для парного программирования](http://pivotallabs.com/users/joe/blog/articles/2199-how-we-use-tmux-for-remote-pair-programming-). Надо попробовать, хотя не так много людей готовы программировать со мной в emacs/vim. #tmux #pp
 * [Мультимастер в Монго всё-таки работает!](http://blog.pythonisito.com/2012/07/multi-master-replication-in-mongodb.html) - есть живые люди, которые используют mmm и не плачут. Надо и мне попробовать. #mongo #mmm
 * [Как выглядит типовой исполняемый PE файл для виндов](http://code.google.com/p/corkami/wiki/PE101?show=content). Хорошо прорисованный векторный план + сам экзешник, который автор написал в хекс-редакторе, руками. А еще я знаю человека, который руками может написать sendmail.cf, тоже интересно, да. #perverts #pe #windows
 * [Планетарная передача, нарисованная на d3](http://bl.ocks.org/1353700). Никакого смысла, но завораживает. #svg #javascript
