--- a/source/posts/2012-07-19.md
+++ b/source/posts/2012-07-19.md
@@ -4,11 +4,11 @@
 
 ![center](http://gigaom2.files.wordpress.com/2010/12/4199675334_66c3e3d61d_z-1.png)
 
-Страница, разумеется, предназначена для тех, кто пользутется CentOS, и на ней собрано много-много как бы привлекательной информации. Что же они, собственно пишут:
+Страница, разумеется, предназначена для тех, кто пользутется CentOS, и на ней собрано много-много как бы привлекательной информации. Что же они, собственно, пишут:
 
-1. Мы выпускаем ядра и апдейты в один день с RedHat, т.е. раньше чем CentOS.
+1. Мы выпускаем ядра и апдейты в один день с RedHat, т.е. раньше, чем CentOS.
 2. У нас большая платная команда инженеров, наш код лучше, чем у CentOS.
-3. Мы подготовили для вас специальный скриптик, для переезда с CentOS.
+3. Мы подготовили для вас специальный скриптик для переезда с CentOS.
 
 А где же драма, спросите вы? [А драма в другом месте](http://www.bashton.com/blog/2012/oracle-spreading-fud-about-centos/).
 
@@ -22,14 +22,14 @@
 -----
 
 ## Для всех
-* [На SearchEngineLand решили показать всё что скрыто](http://searchengineland.com/firefox-14-now-encrypts-google-searches-but-search-terms-still-will-leak-out-127831). В релиз-ноутах Firefox14 главная фича - поисковые запросы к гуглу теперь идут по SSL. "Это значит две вещи", говорят нам мозилловцы: "Во-первых все ваши запросы теперь нельзя сниффить. Во-вторых, теперь после перехода с гугла на третьи сайты они не получат по рефереру запрос, с которым вы пришли". Так вот, Дани Саливан нашел, что это не правда. Действительно, при переходе из органической выдачи реферер теряется, в силу особенностей SSL поиска. Но если вы перешли по рекламе, что случается не так уж и редко, гугл принудительно передает рекламодателю ваш поисковые запрос. Причем, гугл этого никогда и не скрывал, ваши запросы - не прайвеси. Правилен ли такой подход? Не знаю. Но сам по себе инцидент неприятен. #google #firefox #ssl
-* “[Гугл забил гвоздик в крышку старой аналитики](http://techcrunch.com/2012/07/17/google-puts-nail-in-the-coffin-for-static-analytics-real-time-now-the-only-option/)” - пишет нам Теккранч, и это действительно так. Новый гугл-аналитикс работает так, что создает 100% ощущение реалтайма. Заметьте, на самом деле это конечно не реалтайм, задержки достигают минуты, а то и больше, но важен же не сам реалтайм, а ощущение от него. Я понимаю людей, которые восторгаются возможностью понять, сколько прямо сейчас на сайте людей и что они делают. Но в этом отношении куда лучше работает [Woopra](http://woopra.com). Зато по полноте фич гугл-аналитикс теперь уделывает почти всех. Social Reports, Mobile Reports, сплит-тесты прямо в аналитике - всё это фичи, которые *одновременно* есть очень мало у кого. Сейчас у гугла только два feature complete конкурента - [OmniTure от Adobe](http://www.omniture.com/) и [Яндекс.Метрика](http://metrika.yandex.ru). Все три игрока держат бешенный темп, боюсь что маленьким компаниям за ними уже не угнаться. #ga #metrika
-* [Совершенно невероятный Chrome Web Labs](http://www.chromeweblab.com/) с очень интересными визуальными и проектными экспериментами. Так же интересно, что это кажется первый проект гугла, где они отказались от брендинга в названии. Теперь Chrome самостоятельный бренд, для подчеркивания принадлежности местами написано "Made By Google". Они даже перестали называть его Google Chrome. Поздравляю ребят из команды хрома с этим достижением! #google #chrome #labs
+* [На SearchEngineLand решили показать всё, что скрыто](http://searchengineland.com/firefox-14-now-encrypts-google-searches-but-search-terms-still-will-leak-out-127831). В релиз-ноутах Firefox14 главная фича - поисковые запросы к гуглу теперь идут по SSL. "Это значит две вещи", говорят нам мозилловцы: "Во-первых, все ваши запросы теперь нельзя сниффить. Во-вторых, теперь после перехода с гугла на третьи сайты они не получат по рефереру запрос, с которым вы пришли". Так вот, Дани Саливан нашел, что это не правда. Действительно, при переходе из органической выдачи реферер теряется, в силу особенностей SSL поиска. Но если вы перешли по рекламе, что случается не так уж и редко, гугл принудительно передает рекламодателю ваш поисковые запрос. Причем, гугл этого никогда и не скрывал, ваши запросы - не прайвеси. Правилен ли такой подход? Не знаю. Но сам по себе инцидент неприятен. #google #firefox #ssl
+* “[Гугл забил гвоздик в крышку старой аналитики](http://techcrunch.com/2012/07/17/google-puts-nail-in-the-coffin-for-static-analytics-real-time-now-the-only-option/)” - пишет нам Теккранч, и это действительно так. Новый гугл-аналитикс работает так, что создает 100% ощущение реалтайма. Заметьте, на самом деле это, конечно, не реалтайм, задержки достигают минуты, а то и больше, но важен же не сам реалтайм, а ощущение от него. Я понимаю людей, которые восторгаются возможностью понять, сколько прямо сейчас на сайте людей и что они делают. Но в этом отношении куда лучше работает [Woopra](http://woopra.com). Зато по полноте фич гугл-аналитикс теперь уделывает почти всех. Social Reports, Mobile Reports, сплит-тесты прямо в аналитике - всё это фичи, которые *одновременно* есть очень мало у кого. Сейчас у гугла только два feature complete конкурента - [OmniTure от Adobe](http://www.omniture.com/) и [Яндекс.Метрика](http://metrika.yandex.ru). Все три игрока держат бешенный темп, боюсь, что маленьким компаниям за ними уже не угнаться. #ga #metrika
+* [Совершенно невероятный Chrome Web Labs](http://www.chromeweblab.com/) с очень интересными визуальными и проектными экспериментами. Так же интересно, что это, кажется, первый проект гугла, где они отказались от брендинга в названии. Теперь Chrome самостоятельный бренд, для подчеркивания принадлежности местами написано "Made By Google". Они даже перестали называть его Google Chrome. Поздравляю ребят из команды хрома с этим достижением! #google #chrome #labs
 * [Объявлена дата выхода Win'8 - 26 октября](http://www.redmondtimes.com/2012/07/18/windows-8-launch-date-announced-october-26th.aspx). Принимаю ставки, когда доля людей перешедших на восьмерку достигнет 10%? #ms #win8
-* [Gmail over SMS](http://google-africa.blogspot.co.uk/2012/07/send-and-receive-gmail-on-your-phone-as.html). Думаете фантастика? Нет, это новый проект гугла в африке. С интернетом там плохо, а смски ходят. Поэтому ваша почта будет приходить к вам смсками, и отвечать вы можете так же. Бешенные деньги закопаны в этом проекте, интересно, будет ли отдача. #gmail #sms
-* [Нико Гарсия нарисовал концепт замка, управляемого телефоном](http://www.nico.im/post/27498101987/reinventing-the-key). Ну, т.е. дверной замок, который управляется от вашего телефона, а так же умеет впускать с помощью их телефона тех, кого вы ждете. Понятно, концепция доступов из сети перенесена в реальный мир. Я бы такой замок купил, как дополнительный. #hard #startup
+* [Gmail over SMS](http://google-africa.blogspot.co.uk/2012/07/send-and-receive-gmail-on-your-phone-as.html). Думаете, фантастика? Нет, это новый проект гугла в африке. С интернетом там плохо, а смски ходят. Поэтому ваша почта будет приходить к вам смсками, и отвечать вы можете так же. Бешеные деньги закопаны в этом проекте, интересно, будет ли отдача. #gmail #sms
+* [Нико Гарсия нарисовал концепт замка, управляемого телефоном](http://www.nico.im/post/27498101987/reinventing-the-key). Ну, т.е. дверной замок, который управляется от вашего телефона, а также умеет впускать с помощью их телефона тех, кого вы ждете. Понятно, концепция доступов из сети перенесена в реальный мир. Я бы такой замок купил, как дополнительный. #hard #startup
 * [Это уже сумасшествие какое-то. Fab.com получил ЕЩЕ $100m](http://online.wsj.com/article/SB10000872396390444097904577535323312754532.html), в дополнение к сотне, которую получал в марте. Ну, вот куда им 200 миллионов? Что они будут с ними делать, если их нельзя потратить на машины и яхты? #fab #startup #madness
-* Кстати о стартапах - [табличка, показывающая как конвертируется convertible note](http://rajibedi.tumblr.com/post/27034332353/discount-or-cap-a-spreadsheet-that-shows-what-happens) в реальные деньги/дисконты для инвестора. Положу тут как в закладки, чтобы людям давать. Мало кто понимает, как это на самом деле работает. #convertible #startup
+* Кстати, о стартапах - [табличка, показывающая, как конвертируется convertible note](http://rajibedi.tumblr.com/post/27034332353/discount-or-cap-a-spreadsheet-that-shows-what-happens) в реальные деньги/дисконты для инвестора. Положу тут как в закладки, чтобы людям давать. Мало кто понимает, как это на самом деле работает. #convertible #startup
 * [Первый прототип iPad был у эппл в 2000 году](http://www.networkworld.com/community/blog/earliest-known-photos-apple-ipad-prototype). Но сначала посмотрите на видео, там, на странице. Это единственная презентация, на которой по Джобсу видно - что-то пошло не так. Мотайте на 3:10 примерно. На второй странице текста (да, там есть вторая страница!) - прототип iPad. Это называется "тизер". #ipad #steve #apple
 * Кстати о стыде. [Британский суд принуждает Apple опубликовать запись о том, что Samsung не копировал iPad](http://www.bloomberg.com/news/2012-07-18/apple-must-publish-notice-samsung-didn-t-copy-ipad-judge-says.html). Посмотрим, как эппл выкрутится. Я бы на месте Кука просто закрыл все эплсторы в Британии. Посмотрел бы на народный протест :) #apple #ipad
 
@@ -43,4 +43,4 @@
 
 ## Разное
 * [Пять человек согласились стоять в ближней зоне ядерного взрыва](http://www.npr.org/blogs/krulwich/2012/07/16/156851175/five-men-agree-to-stand-directly-under-an-exploding-nuclear-bomb?ps=cprs). Было это в 57 году. Почти все они умерли уже в 2000ых, в возрасте более 80 лет. Такие дела. #scifi #radiation
-* [Дыра на Марсе](http://apod.nasa.gov/apod/ap120718.html) - крайне любопытный феномен, непонятная дыра на фотографии с Марса. Ваши версии? Я пока думаю что это wormsign! #science #nasa
+* [Дыра на Марсе](http://apod.nasa.gov/apod/ap120718.html) - крайне любопытный феномен, непонятная дыра на фотографии с Марса. Ваши версии? Я пока думаю, что это wormsign! #science #nasa
