--- a/source/posts/2012-07-09.md
+++ b/source/posts/2012-07-09.md
@@ -43,7 +43,7 @@
 * [И ещё одна библиотека, на этот раз - для перехвата нажатий клавиш](http://craig.is/killing/mice). Сегодня день джаваскрипта у меня, да. #javascript #keyboard
 
 ## Для гиков
-* [Geeknote - command line client for Evernote](http://www.geeknote.me/). Консольный клиент для Evernote, реализована практически вся основная функциональность для Evernote + отдельная утилита синхронизации локальных директорий с блокнотами в Evernote. И для демонстрации есть [крутой интерактивный веб-терминал](http://geeknote.me/try/), работает череp веб-сокеты. [via @VitaliyRodnenko](http://github.com/VitaliyRodnenko) #evernote #linux #python
+* [Geeknote - command line client for Evernote](http://www.geeknote.me/). Консольный клиент для Evernote, реализована практически вся основная функциональность для Evernote + отдельная утилита синхронизации локальных директорий с блокнотами в Evernote. И для демонстрации есть [крутой интерактивный веб-терминал](http://geeknote.me/try/), работает через веб-сокеты. [via @VitaliyRodnenko](http://github.com/VitaliyRodnenko) #evernote #linux #python
 * [4chan рассказал всем, как он устроен](http://content.4chan.org/tmp/extensions.html) программно-аппаратно. Интересно с точки зрения проверки ваших взглядов на реальность: насколько может быть посещаема анонимная имеджборда? #4chan
 * [Очень круто: как правильно делать RESTful API](https://speakerdeck.com/u/nicola/p/developing-restful-web-apis-with-python-flask-and-mongodb) на Mongo, Flask, в общем - на питоне. #python #flask #rest
 * [И еще про фласк - презентация "Крутые паттерны использования Flask"](https://speakerdeck.com/u/mitsuhiko/p/advanced-flask-patterns) от автора фласка. Читал запоем, есть и видео с его выступлением, если что. #flask #python
