--- a/source/posts/2012-07-24.md
+++ b/source/posts/2012-07-24.md
@@ -4,7 +4,8 @@
 
 ![center](http://www.splashnology.com/uploads/2011/10/main1.jpg)
 
-По сути, более  года назад произошел сплит - W3C остались главными за "продакшн стандарт" HTML5, а WHATWG занялись "постоянно развивающимся стандартом". Т.е. стабильная ветка досталас W3C, что в общем-то было логично. И казалось что это разделение логично и позволяет всем жить мирно. Но нет.
+По сути, более  года назад произошел сплит - W3C остались главными за "продакшн стандарт" HTML5, а WHATWG занялись "постоянно развивающимся стандартом". Т.е. стабильная ветка досталась
+W3C, что в общем-то было логично. И казалось что это разделение логично и позволяет всем жить мирно. Но нет.
 
 На выходных Ян Хиксон [по сути объявил о разводе](http://lists.w3.org/Archives/Public/public-whatwg-archive/2012Jul/0119.html) в официальном листе whatwg. Ранее Хиксон был одним из ведущих редакторов документов от w3c и whatwg, но его мягко отодвинули от работы в w3c.
 
