Грамматическая ошибка: Кстати, оцените, если w3c считает что /разрабатывать -> разрабатывает/ html5, ребята из whatwg говорят всем что делают просто html.

--- a/source/posts/2012-07-24.md
+++ b/source/posts/2012-07-24.md
@@ -8,7 +8,7 @@
 
 На выходных Ян Хиксон [по сути объявил о разводе](http://lists.w3.org/Archives/Public/public-whatwg-archive/2012Jul/0119.html) в официальном листе whatwg. Ранее Хиксон был одним из ведущих редакторов документов от w3c и whatwg, но его мягко отодвинули от работы в w3c.
 
-Т.е. сейчас никакой формальной связи между спецификациями от этих двух компаний больше нет. Скорее всего это приведет к разведению спецификаций. Я болею за более молодую и активную WHATWG, которая двигает сейчас почти все правильные спецификации. Хотя w3c еще долго будет казаться всем самым серьезным игроком, думаю это продлится не более 10 лет. Кстати, оцените, если w3c считает что разрабатывать html5, ребята из whatwg говорят всем что делают просто html. Ну, the new html :)
+Т.е. сейчас никакой формальной связи между спецификациями от этих двух компаний больше нет. Скорее всего это приведет к разведению спецификаций. Я болею за более молодую и активную WHATWG, которая двигает сейчас почти все правильные спецификации. Хотя w3c еще долго будет казаться всем самым серьезным игроком, думаю это продлится не более 10 лет. Кстати, оцените, если w3c считает что разрабатывает html5, ребята из whatwg говорят всем что делают просто html. Ну, the new html :)
 
 Как же не везет вообще всему проекту html, еще со времен html2.0. Очень хочется верить что рано или поздно он окажется в правильных руках.
 
