традиционно добавляем много запятых.

--- a/source/posts/2012-07-24.md
+++ b/source/posts/2012-07-24.md
@@ -1,37 +1,37 @@
 # Раскол HTML5
 
-До недавнего времени два коммитета, WHATWG и W3C работали над новым стандартом HTML5 вместе. В прошлом году произошел раскол, мы все надеялись что всё наладится но нет. Теперь у нас будет два стандарта HTML5. Все, кто слышал мои лекции по управлению технологическими проектами сейчас, наверное, слышат мой демонический хохот.
+До недавнего времени два комитета, WHATWG и W3C, работали над новым стандартом HTML5 вместе. В прошлом году произошел раскол, мы все надеялись, что всё наладится, но нет. Теперь у нас будет два стандарта HTML5. Все, кто слышал мои лекции по управлению технологическими проектами, сейчас, наверное, слышат мой демонический хохот.
 
 ![center](http://www.splashnology.com/uploads/2011/10/main1.jpg)
 
-По сути, более  года назад произошел сплит - W3C остались главными за "продакшн стандарт" HTML5, а WHATWG занялись "постоянно развивающимся стандартом". Т.е. стабильная ветка досталас W3C, что в общем-то было логично. И казалось что это разделение логично и позволяет всем жить мирно. Но нет.
+По сути, более  года назад произошел сплит - W3C остались главными за "продакшн стандарт" HTML5, а WHATWG занялись "постоянно развивающимся стандартом". Т.е. стабильная ветка досталась W3C, что, в общем-то, было логично. И казалось, что это разделение логично и позволяет всем жить мирно. Но нет.
 
 На выходных Ян Хиксон [по сути объявил о разводе](http://lists.w3.org/Archives/Public/public-whatwg-archive/2012Jul/0119.html) в официальном листе whatwg. Ранее Хиксон был одним из ведущих редакторов документов от w3c и whatwg, но его мягко отодвинули от работы в w3c.
 
-Т.е. сейчас никакой формальной связи между спецификациями от этих двух компаний больше нет. Скорее всего это приведет к разведению спецификаций. Я болею за более молодую и активную WHATWG, которая двигает сейчас почти все правильные спецификации. Хотя w3c еще долго будет казаться всем самым серьезным игроком, думаю это продлится не более 10 лет. Кстати, оцените, если w3c считает что разрабатывать html5, ребята из whatwg говорят всем что делают просто html. Ну, the new html :)
+Т.е. сейчас никакой формальной связи между спецификациями от этих двух компаний больше нет. Скорее всего, это приведет к разведению спецификаций. Я болею за более молодую и активную WHATWG, которая двигает сейчас почти все правильные спецификации. Хотя w3c еще долго будет казаться всем самым серьезным игроком, думаю, это продлится не более 10 лет. Кстати, оцените, если w3c считает, что разрабатывает html5, ребята из whatwg говорят всем, что делают просто html. Ну, the new html :)
 
-Как же не везет вообще всему проекту html, еще со времен html2.0. Очень хочется верить что рано или поздно он окажется в правильных руках.
+Как же не везет вообще всему проекту html, еще со времен html2.0. Очень хочется верить, что рано или поздно он окажется в правильных руках.
 
 -----
 
 ## Для всех
 * [Секретное оружие Мариссы](http://www.wired.com/business/2012/07/marissas-secret-weapon-for-recruiting-new-yahoo-talent/). Wired откопал программу Мариссы Майер по выращиванию суперзвезд в Google и считает, что Марисса будет строить ту же модель в Яху. Это возможно, надо только (обманом?) заманить на руины этой компании сильную молодежь. Я бы пошел, но уже не молодежь :) #marissa #yahoo
-* [Интересная статистика платных приложений](http://www.tonywright.com/2012/how-to-evaluate-a-paid-iphone-app-idea/). Всё как я и думал - деньги сейчас зарабатывают в основном на in-app purchase. Всё жду, когда же в appstore вообще перестанут появляться платные приложения. Кстати, начиная с iOS6 аппстор больше не спрашивает пароль при покупке бесплатного софта. #ios #appstore #money
+* [Интересная статистика платных приложений](http://www.tonywright.com/2012/how-to-evaluate-a-paid-iphone-app-idea/). Всё, как я и думал - деньги сейчас зарабатывают в основном на in-app purchase. Всё жду, когда же в appstore вообще перестанут появляться платные приложения. Кстати, начиная с iOS6, аппстор больше не спрашивает пароль при покупке бесплатного софта. #ios #appstore #money
 * [Gittip вывесил статистику](https://www.gittip.com/about/stats.html). Это практический ответ всем, кто верит в донейты. Всего 5% людей завели там данные кредитки. И 2500 человек пожертвовали на что-то чуть более $1k. Да, я там [тоже зарегистрирован, шлите донейты](https://www.gittip.com/bobuk/). Принимаю ставки, сколько денег будет на моём гиттип счету к завтрашнему утру. #gittip #donate
-* [YouTube активно предлагает пользователям вводить свои реальные имена](http://betabeat.com/2012/07/start-using-your-full-name-begs-desperate-youtube-message/) и это в общем логично. Когда не летит G+, надо превращать в соцсеть нормальный, сильный продукт - а youtube как раз такой. #youtube
+* [YouTube активно предлагает пользователям вводить свои реальные имена](http://betabeat.com/2012/07/start-using-your-full-name-begs-desperate-youtube-message/) и это, в общем, логично. Когда не летит G+, надо превращать в соцсеть нормальный, сильный продукт - а youtube как раз такой. #youtube
 * [Волшебный сервис, превращающий слои и текст из фотошопа в неплохой html+css](http://www.markupwand.com). Он не первый такой, но в данном случае результат действительно удивляет. Если попробуете - пришлите образцы, что получилось у вас, ладно? #html #photoshop
 * [VMWare покупают Nicira Inc](http://bhorowitz.com/2012/07/23/vmware-buys-nicira-for-1-26b/). Странно, что эту покупку совершает не Parallels, казалось бы, сетевая виртуализация им ближе. Сумма сделки - 1.26 инстаграмма долларов. #nicira #vmware
 * Оффлайновый хак: [хакер нашел потенциальную дыру в системе безопасности гостинниц](http://www.forbes.com/sites/andygreenberg/2012/07/23/hacker-will-expose-potential-security-flaw-in-more-than-four-million-hotel-room-keycard-locks/). Он нашел простой метод открывать двери в гостинницах с замками на картах. Стоимость универсальной открывалки - 50 долларов. #livehack #security
 * И еще один: [идиоты в супермаркетах Tesco](http://mtdevans.com/projects/barcode/). Это ОЧЕНЬ глупо, хранить цену скидочного товара прямо в баркоде. Даже я бы воспользовался и напечатал такие ценники, чтобы мне остались должны. :) #tesco #livehack #security
-* [Referly отдает наружу API](http://techcrunch.com/2012/07/23/referly-gets-more-social-launches-api-now-any-site-can-have-a-referral-program/) - теперь вы знаете как сделать реферальную программу на своем сайте. API пока страшненький и с проблемами в уникоде, надеюсь они его улучшат. #referly #api
+* [Referly отдает наружу API](http://techcrunch.com/2012/07/23/referly-gets-more-social-launches-api-now-any-site-can-have-a-referral-program/) - теперь вы знаете, как сделать реферальную программу на своем сайте. API пока страшненький и с проблемами в уникоде, надеюсь, они его улучшат. #referly #api
 
 ## Для гиков
 * [В связи с темой дня - лучшие html5 туториалы](http://www.noupe.com/design/html5-tutorials.html), небольшой сборник туториалов для улучшения понимания html5/css3. Я сегодня ночью прочитал все, пользу ощущаю. #html #css #tutorial
 * [Дизайн паттерны в JavaScript](http://net.tutsplus.com/tutorials/javascript-ajax/digging-into-design-patterns-in-javascript/). Дизайнеры, расслабьтесь, это про программирование, а не про дизайн :) #javascript
 * [В Хроме поддержали расширения File API](http://www.webmonkey.com/2012/07/chrome-21-adds-new-drag-and-drop-tricks/) и теперь в JavaScript можно понять, ты получил файл или директорию. А средства для траверса директорий уже есть. #chrome #html5
-* [О том, как обучают SVM](http://www.aelag.com/147952673) - хорошая обзорная статья. Хочу написать серию статей о применениях искусственного интеллекта в постых ситуациях. Вообще "технологии в непривычных местах" это сейчас моя любимая тема. #svm #svr
-* [Если вы используете Redis в продакшне - начните думать про Redis Sentinel](http://antirez.com/post/redis-sentinel-beta-released.html), который теперь в статусе уже беты. Хотябы ради автоматического фейловера. #redis
-* [3 совета как писать на скале в надежде на производительность](http://www.sumologic.com/blog/technology/3-tips-for-writing-performant-scala). Я не понимаю, что, на нем реально кто-то продакшн код пишет? #java #jre #scala
-* [Whython - питон для энтерпрайза!](http://writeonly.wordpress.com/2010/04/01/whython-python-for-people-who-hate-whitespace/). Всё как в питоне, только выделение блоков происходит не идентейшном, а фигурными скобками. АААаааааа! #python
+* [О том, как обучают SVM](http://www.aelag.com/147952673) - хорошая обзорная статья. Хочу написать серию статей о применениях искусственного интеллекта в простых ситуациях. Вообще, "технологии в непривычных местах" это сейчас моя любимая тема. #svm #svr
+* [Если вы используете Redis в продакшне - начните думать про Redis Sentinel](http://antirez.com/post/redis-sentinel-beta-released.html), который теперь в статусе уже беты. Хотя бы ради автоматического фейловера. #redis
+* [3 совета, как писать на скале в надежде на производительность](http://www.sumologic.com/blog/technology/3-tips-for-writing-performant-scala). Я не понимаю, что, на нем реально кто-то продакшн код пишет? #java #jre #scala
+* [Whython - питон для энтерпрайза!](http://writeonly.wordpress.com/2010/04/01/whython-python-for-people-who-hate-whitespace/). Всё, как в питоне, только выделение блоков происходит не идентейшном, а фигурными скобками. АААаааааа! #python
 
 *В завтрашнем выпуске много тем от читателей, не забывайте, добавляйте свои заметки в гитхаб! Ну, и у нас пари про [gittip](https://www.gittip.com/bobuk/), помните?*
