В слове «гостиница» одна буква «н».

--- a/source/posts/2012-07-24.md
+++ b/source/posts/2012-07-24.md
@@ -21,7 +21,7 @@
 * [YouTube активно предлагает пользователям вводить свои реальные имена](http://betabeat.com/2012/07/start-using-your-full-name-begs-desperate-youtube-message/) и это, в общем, логично. Когда не летит G+, надо превращать в соцсеть нормальный, сильный продукт - а youtube как раз такой. #youtube
 * [Волшебный сервис, превращающий слои и текст из фотошопа в неплохой html+css](http://www.markupwand.com). Он не первый такой, но в данном случае результат действительно удивляет. Если попробуете - пришлите образцы, что получилось у вас, ладно? #html #photoshop
 * [VMWare покупают Nicira Inc](http://bhorowitz.com/2012/07/23/vmware-buys-nicira-for-1-26b/). Странно, что эту покупку совершает не Parallels, казалось бы, сетевая виртуализация им ближе. Сумма сделки - 1.26 инстаграмма долларов. #nicira #vmware
-* Оффлайновый хак: [хакер нашел потенциальную дыру в системе безопасности гостинниц](http://www.forbes.com/sites/andygreenberg/2012/07/23/hacker-will-expose-potential-security-flaw-in-more-than-four-million-hotel-room-keycard-locks/). Он нашел простой метод открывать двери в гостинницах с замками на картах. Стоимость универсальной открывалки - 50 долларов. #livehack #security
+* Оффлайновый хак: [хакер нашел потенциальную дыру в системе безопасности гостиниц](http://www.forbes.com/sites/andygreenberg/2012/07/23/hacker-will-expose-potential-security-flaw-in-more-than-four-million-hotel-room-keycard-locks/). Он нашел простой метод открывать двери в гостиницах с замками на картах. Стоимость универсальной открывалки - 50 долларов. #livehack #security
 * И еще один: [идиоты в супермаркетах Tesco](http://mtdevans.com/projects/barcode/). Это ОЧЕНЬ глупо, хранить цену скидочного товара прямо в баркоде. Даже я бы воспользовался и напечатал такие ценники, чтобы мне остались должны. :) #tesco #livehack #security
 * [Referly отдает наружу API](http://techcrunch.com/2012/07/23/referly-gets-more-social-launches-api-now-any-site-can-have-a-referral-program/) - теперь вы знаете, как сделать реферальную программу на своем сайте. API пока страшненький и с проблемами в уникоде, надеюсь, они его улучшат. #referly #api
 
